fix 2 scroll to top scrollbart

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -124,10 +124,14 @@ h6 { font-size: 16px; }
 /*	01) Base
 /*------------------------------------------------------------------*/
 
+html, body {
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+
 html {
 	overflow-x: hidden;
-	padding: 0px;
-	margin: 0px
 }
 
 *:after,
